# blockfolio-backend

./: Cargo.toml
migrations/: 20240101000000_initial.sql  20240101000001_add_price_change.sql
src/: config.rs  database.rs  main.rs  state.rs
src/routes/: ethereum.rs  health.rs  mod.rs  solana.rs  transactions.rs  users.rs
src/services/: cache.rs  ethereum_client.rs  metadata_service.rs  mod.rs  price_service.rs  solana_client.rs
src/types/: mod.rs  portfolio.rs  token.rs  transaction.rs  user.rs
src/utils/: errors.rs  helpers.rs
