[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.0"
solana-sdk = "2.0"
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"
solana-program-pack = "2.0"
spl-token = "6.0"
ethers = "2.0"
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"